--- a/Lab1/sawyer.html
+++ b/Lab1/sawyer.html
@@ -73,9 +73,9 @@
     <div class="introduction">INTRODUCTION</div>
     <div class="introduction-statement">
       <div class="introduction-statement-text">
-        A results-oriented and collaborative software developer currently pursuing a dual degree in Computer Science and ITWS at Rensselaer Polytechnic Institute. 
-        With experience in full-stack web development, game design, and software engineering, I excel at turning project requirements into functional applications. 
-        I am seeking to leverage my skills in a software engineering internship role for Summer 2026.
+        An aspiring software engineer currently pursuing a B.S. in Computer Science and Information Technology and Web Science at Rensselaer Polytechnic Institute.
+        I enjoy creating and developing from scratch, whether that be a game, website, or web application. I relish in learning new technologies and putting them to use in my projects.
+        I am currently seeking internship opportunities for the summer of 2026.
       </div>
     </div>
     <div class="education">EDUCATION</div>
