--- a/Lab1/kat.html
+++ b/Lab1/kat.html
@@ -23,7 +23,7 @@
       <a href="kat.html" class="member-1">I</a>
       <a href="manny.html" class="member-2">II</a>
       <a href="mj.html" class="member-3">III</a>
-      <a href="ryan.html" class="member-4">IV</a>
+      <a href="varugr.html" class="member-4">IV</a>
       <a href="sawyer.html" class="member-5">V</a>
     </div>
 
