--- a/Lab1/sawyer.html
+++ b/Lab1/sawyer.html
@@ -23,7 +23,7 @@
         <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
         <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
         <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
-        <a href="ryan.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
         <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
     </div>
 
