Fixing Small HTML Validation Error

--- a/Lab1/varugr.html
+++ b/Lab1/varugr.html
@@ -35,7 +35,7 @@
         <div class="weather-vanes-title">IV</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/ryan.png" style="aspect-ratio: inherit;" height="300px" alt="Ryan Varughese"/>
+        <img src="Resources/ryan.png" style="aspect-ratio: inherit;" height="300" alt="Ryan Varughese"/>
         <div class="weather-vanes-title2">Ryan Varughese</div>
       </div>
     </div>
