--- a/Lab1/manny.html
+++ b/Lab1/manny.html
@@ -1,1 +1,255 @@
-<p>hello world!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
+    <title>WeatherVanes | Emmanuel Yeboah</title>
+    <link rel="stylesheet" href="Resources/merged-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
+</head>
+<body>
+   <div class="main vcard">
+  <div class="picture-stack" style="
+      background: url(Resources/dark-souls-larger.png) center;
+      background-size: cover;
+      background-repeat: no-repeat;">
+    <div class="header">
+      <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
+      <div class="separating-div"></div>
+      <div class="members">MEMBERS</div>
+        <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+        <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
+        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Manny.pic" data-info="Member 5">V</a>
+    </div>
+
+    <div class="hero">
+      <div class="member-number">
+        <div class="weather-vanes-title">V</div>
+      </div>
+      <div class="headshot-and-name">
+        <img src="Resources/Manny.Pic.jpg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Emmanuel Yeboah"/>
+        <div class="weather-vanes-title2 fn">Emmanuel Yeboah</div>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio-information">
+    <div class="contact-information">CONTACT INFORMATION</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="address">ADDRESS ∘</div>
+        </div>
+        <div class="description">
+          <div class="desc adr">
+            <span class="street-address">333 E 176 St</span>,
+            <span class="locality">Bronx</span>
+            <span class="region">NY</span>
+            <span class="postal-code">10457</span>
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="phone">PHONE ∘</div>
+        </div>
+        <div class="description">
+          <div class="_207-337-1602 tel">+1 (929) 217-7330</div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="email">EMAIL ∘</div>
+        </div>
+        <div class="description">
+          <div class="montes3-rpi-edu"><a href="mailto:yeboae@rpi.edu" class="email">yeboae@rpi.edu</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="introduction">INTRODUCTION</div>
+    <div class="introduction-statement">
+      <div class="introduction-statement-text">
+        I am a senior Information Technology and Web Science major with a passion for creating immersive experiences at the intersection of the digital and physical. 
+        I am pursuing a career in spatial design and frontend development, aiming to fuse my interdisciplinary architectural knowledge with robust technical skills in IT and computer science. 
+        I am seeking opportunities to apply my unique perspective and grow my expertise on the technical implementation side of interactive environments.
+      </div>
+    </div>
+    <div class="education">EDUCATION</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="secondary-school">SECONDARY SCHOOL ∘</div>
+        </div>
+        <div class="description">
+          <div class="Bronx-Engineering-and-Technology-Academy">
+            Bronx Engineering and Technology Academy
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="university-institution">UNIVERSITY / INSTITUTION ∘</div>
+        </div>
+        <div class="description">
+          <div class="rensselaer-polytechnic-institute">
+            <a href="https://www.rpi.edu/">Rensselaer Polytechnic Institute</a>
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="degree-program">DEGREE / PROGRAM</div>
+        </div>
+        <div class="description">
+          <div class="majors">
+            B.S. in Information Technology & Web Science 
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="dates">DATES</div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">August 2021 - May 2026</div>
+        </div>
+      </div>
+    </div>
+    <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="project">
+            MITR Upshift Project | Writer and Frontend Developer
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">CSS | HTML | C++ | Github </div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          <ul>
+            <li>Designed and implemented daily lesson plans in core subjects and a specialized computer science
+                curriculum for K-8 students.</li>
+            <li>Instructed scholars in computer science principles, guiding them through the hands-on process of
+                designing and building their own games.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="project">
+            Intro to ITWS - SuperTaste | Fullstack Developer
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">HTML | CSS | JavaScript | PHP | MySQL | Git & Github</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          <ul>
+        <li>Built a full-stack recipe app using PHP, SQL, and JavaScript/jQuery to help users with dietary restrictions find recipes. Designed the database to connect ingredients and dietary tags.</li> 
+        <li>Developed an interactive frontend with real-time filtering and a responsive CSS design for improved
+user experience.</li>   
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="project">
+    <div class="work-experience">WORK EXPERIENCE</div>
+        <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="project">
+            Practice Makes Perfect (PMP) | Mentor
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">May 2021 - Sep 2021</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          <ul>
+            <li>Designed and implemented daily lesson plans in core subjects and a specialized computer science
+                curriculum for K-8 students.</li>
+            <li>Instructed scholars in computer science principles, guiding them through the hands-on process of
+                designing and building their own games.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="project">
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-1">
+            CVS Pharmacy - Shift Supervisor
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">oct 2023 - nov 2024</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          <ul>
+            <li>Managed and supervised team members to ensure excellent customer service and achieve sales targets.</li>
+            <li>Optimized workflow and store operations to enhance efficiency and productivity.</li>
+            <li>Handled key administrative duties, including inventory management, cash handling, and reconciliation.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-2">
+           ACE (Architecture Construction Engineering) - Intern
+          </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">September 2021 - June 2024</div>
+        </div>
+      </div>
+      <div class="work-exp-details">
+        <div class = info>
+          <ul>
+            <li>Collaborated in an agile team to design a complex system (gastronomical center), defining both
+internal structures and external interfaces.</li>
+            <li>Practiced an iterative design process, actively soliciting and incorporating feedback from senior
+            developers and peers to refine prototypes against functional requirements.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="work-experience-3">
+    <div class="skills">SKILLS</div>
+    <div class="skills2">
+      <div class="skill-div">
+        <ul class="skill-list">
+          <li><b>Languages:</b> Python, Html, Java,C, C++, SQL, React.js, Three.js,</li>
+          <li><b>Rhinocerous 3D, Auto CAD, Figma (Architect Academics), Excel, Powerpoint, Office Suite, Azure</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div id="member-hover-card" class="member-card">
+  <img id="member-card-image" src="script" alt="Team Member">
+  <div id="member-card-name"></div>
+  <div id="member-card-info"></div>
+</div>
+
+<script src="Resources/main.js"></script>
+</body>
+</html>
