--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Constitution of the United States</title>
 </head>
 <body>
   <h1>The Constitution of the United States</h1>
