Updating my page
Added a class for my high school  (in merged-styles.css) but it might not be necessary, may remove it later

--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
-    <title>WeatherVanes | Katrina M.</title>
+    <title>WeatherVanes | Mary Jane N.</title>
     <link rel="stylesheet" href="Resources/merged-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="main">
+   <div class="main vcard">
   <div class="picture-stack" style="
       background: url(Resources/dark-souls-larger.png) center;
       background-size: cover;
@@ -20,20 +21,20 @@
       <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-      <a href="kat.html" class="member-1">I</a>
-      <a href="manny.html" class="member-2">II</a>
-      <a href="nansam.html" class="member-3">III</a>
-      <a href="varugr.html" class="member-4">IV</a>
-      <a href="sawyer.html" class="member-5">V</a>
+        <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+        <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
+        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
     </div>
 
     <div class="hero">
       <div class="member-number">
-        <div class="weather-vanes-title">I</div>
+        <div class="weather-vanes-title">III</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/kat.jpeg" style="aspect-ratio: inherit;" height="300px" />
-        <div class="weather-vanes-title2">Katrina Mosquera-Maykovych</div>
+        <img src="Resources/MJ.jpg" style="aspect-ratio: inherit;" height="300" alt="Mary Jane Nansaram"/>
+        <div class="weather-vanes-title2 fn">Mary Jane Nansaram</div>
       </div>
     </div>
   </div>
@@ -45,8 +46,11 @@
           <div class="address">ADDRESS ∘</div>
         </div>
         <div class="description">
-          <div class="desc">
-            36 Farm Street, Troy, NY 12180
+          <div class="desc adr">
+            <span class="street-address">79-15 35th Ave</span>,
+            <span class="locality">Jackson Heights</span>
+            <span class="region">NY</span>
+            <span class="postal-code">11372</span>
           </div>
         </div>
       </div>
@@ -55,7 +59,7 @@
           <div class="phone">PHONE ∘</div>
         </div>
         <div class="description">
-          <div class="_347-612-3718">(347) 612-3718</div>
+          <div class="_917-375-5162 tel">(917) 375-5162</div>
         </div>
       </div>
       <div class="text">
@@ -63,22 +67,16 @@
           <div class="email">EMAIL ∘</div>
         </div>
         <div class="description">
-          <div class="mosquk-rpi-edu">mosquk@rpi.edu</div>
+          <div class="email"><a href="mailto:nansam@rpi.edu" class="email">nansam@rpi.edu</a></div>
         </div>
       </div>
     </div>
     <div class="introduction">INTRODUCTION</div>
     <div class="introduction-statement">
-      <div
-        class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+      <div class="introduction-statement-text">
+        A third-year undergraduate at Rensselaer Polytechnic Institute, majoring in Information Technology & Web Science.
+        Mainly experienced with C++ programming and HCI-friendly design. I believe the form and "feel" of an application is equally important as its function. 
+        In my spare time I experiment with technologies that aid in my projects, whether practically or aesthetically.
       </div>
     </div>
     <div class="education">EDUCATION</div>
@@ -88,8 +86,8 @@
           <div class="secondary-school">SECONDARY SCHOOL ∘</div>
         </div>
         <div class="description">
-          <div class="joseph-a-foran-high-school">
-            Joseph A. Foran High School
+          <div class="bths-high-school">
+            <a href="https://www.bths.edu/">Brooklyn Technical High School</a>
           </div>
         </div>
       </div>
@@ -99,7 +97,7 @@
         </div>
         <div class="description">
           <div class="rensselaer-polytechnic-institute">
-            Rensselaer Polytechnic Institute
+            <a href="https://www.rpi.edu/">Rensselaer Polytechnic Institute</a>
           </div>
         </div>
       </div>
@@ -108,8 +106,8 @@
           <div class="degree-program">DEGREE / PROGRAM</div>
         </div>
         <div class="description">
-          <div class="b-s-in-csci-minor-in-math-minor-in-itws">
-            B.S. in CSCI, Minor in MATH, Minor in ITWS
+          <div class="majors">
+            B.S. in Information Technology & Web Science 
           </div>
         </div>
       </div>
@@ -118,11 +116,11 @@
           <div class="dates">DATES</div>
         </div>
         <div class="description">
-          <div class="august-2022-may-2026">August 2022 - May 2026</div>
+          <div class="start-date-end-date">August 2023 - May 2027</div>
         </div>
       </div>
     </div>
-    <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
+     <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
     <div class="projects-accomplishments2">
       <div
         class="description"
@@ -231,5 +229,12 @@
 </div>
 
 
+<div id="member-hover-card" class="member-card">
+  <img id="member-card-image" src="script" alt="Team Member">
+  <div id="member-card-name"></div>
+  <div id="member-card-info"></div>
+</div>
+
+<script src="Resources/main.js"></script>
 </body>
 </html>
