--- a/Lab1/varugr.html
+++ b/Lab1/varugr.html
@@ -25,7 +25,7 @@
       <div class="members">MEMBERS</div>
       <a href="kat.html" class="member-1">I</a>
       <a href="manny.html" class="member-2">II</a>
-      <a href="mj.html" class="member-3">III</a>
+      <a href="nansam.html" class="member-3">III</a>
       <a href="varugr.html" class="member-4">IV</a>
       <a href="sawyer.html" class="member-5">V</a>
     </div>
