--- a/Lab1/manny.html
+++ b/Lab1/manny.html
@@ -236,7 +236,7 @@ internal structures and external interfaces.</li>
       <div class="skill-div">
         <ul class="skill-list">
           <li><b>Languages:</b> Python, Html, Java,C, C++, SQL, React.js, Three.js,</li>
-          <li><b>Rhinocerous 3D, Auto CAD, Figma (Architect Academics), Excel, Powerpoint, Office Suite, Azure</li>
+          <li><b>Tools : Rhinocerous 3D, Auto CAD, Figma (Architect Academics), Excel, Powerpoint, Office Suite, Azure</li>
         </ul>
       </div>
     </div>
