change sawyer.html to montes3.html
and changed all corresponding links to be correct

--- a/Lab1/varugr.html
+++ b/Lab1/varugr.html
@@ -27,7 +27,7 @@
       <a href="manny.html" class="member-2">II</a>
       <a href="nansam.html" class="member-3">III</a>
       <a href="varugr.html" class="member-4">IV</a>
-      <a href="sawyer.html" class="member-5">V</a>
+      <a href="montes3.html" class="member-5">V</a>
     </div>
 
     <div class="hero">
