--- a/Lab1/kat.html
+++ b/Lab1/kat.html
@@ -21,10 +21,10 @@
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
       <a href="kat.html" class="member-1">I</a>
-      <a href="manny.html" class="member-2">II</a>
+      <a href="yeboae.html" class="member-2">II</a>
       <a href="nansam.html" class="member-3">III</a>
       <a href="varugr.html" class="member-4">IV</a>
-      <a href="sawyer.html" class="member-5">V</a>
+      <a href="montes3.html" class="member-5">V</a>
     </div>
 
     <div class="hero">
