--- a/Lab1/manny.html
+++ b/Lab1/manny.html
@@ -24,7 +24,7 @@
         <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
         <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
         <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
-        <a href="sawyer.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Manny.pic" data-info="Member 5">V</a>
+        <a href="montes3.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Manny.pic" data-info="Member 5">V</a>
     </div>
 
     <div class="hero">
