--- a/Lab1/yeboae.html
+++ b/Lab1/yeboae.html
@@ -21,7 +21,7 @@
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
         <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
-        <a href="manny.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+        <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
         <a href="mj.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
         <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
         <a href="montes3.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Manny.pic" data-info="Member 5">V</a>
