Updated my projects section

--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -76,7 +76,8 @@
       <div class="introduction-statement-text">
         A third-year undergraduate at Rensselaer Polytechnic Institute, majoring in Information Technology & Web Science.
         Mainly experienced with C++ programming and HCI-friendly design. I believe the form and "feel" of an application is equally important as its function. 
-        In my spare time I experiment with technologies that aid in my projects, whether practically or aesthetically.
+        In my spare time I experiment with technologies that aid in my projects, whether practically or aesthetically, as well as cybersecurity.
+        Open to internships, apprenticeships, job shadowing and research opportunities.
       </div>
     </div>
     <div class="education">EDUCATION</div>
@@ -120,18 +121,56 @@
         </div>
       </div>
     </div>
-     <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
-    <div class="projects-accomplishments2">
-      <div
-        class="description"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+      <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
+    <div class="contact-info">
+      <div class="text">
+        <div class="title">
+          <div class="project"> <a href="https://www.uscyberchallenge.org/cyber-camps">USCC Virtual Cyber Camp 2023<a/> </div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">July 17 2023 - July 21 2023</div>
+        </div>
+      </div>
+      <div class="work-exp-details-mj">
+        <div class = info>
+          <ul>
+            <li>Earned as a National Cyber Scholarship Scholar - Nationally recognized as a top scorer in a competitive cyber security challenge, leading to an invitation to a week-long accelerated training camp.</li>
+            <li>Classes: Linux Forensics, Mobile Device Forensics, Web App Pen Test, Packet Defense</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="project">voicesofjacksonheights.org - Creator & Manager</div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">July 2022 - June 2024</div>
+        </div>
+      </div>
+      <div class="work-exp-details-mj">
+        <div class = info>
+          <ul>
+            <li>A website where people from my neighborhood, Jackson Heights, could voice their concerns about ongoing developments. NYC Community Board 3 endorsed.</li>
+            <li>Built on WordPress and with CSS.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="text">
+        <div class="title">
+          <div class="project">Image2Pixel</div>
+        </div>
+        <div class="description">
+          <div class="start-date-end-date">January 2025 - April 2025</div>
+        </div>
+      </div>
+      <div class="work-exp-details-mj">
+        <div class = info>
+          <ul>
+            <li>An web application my group and I developed for the Intro to ITWS course.</li>
+            <li>Stylizes uploaded pictures using image manipulation, such as in the form of color filters, pixilization, etc.</li>
+            <li>Uploaded creations are saved on a server connected to the application, allowing users to view their works again in the future.
+          </ul>
+        </div>
       </div>
     </div>
     <div class="work-experience">WORK EXPERIENCE</div>
