--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -25,7 +25,7 @@
       <a href="#prev-works" style="padding: 0px;"><div class="previous-works">PREVIOUS WORKS</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-        <a href="kat.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
         <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
         <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
         <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
