--- a/Lab1/varugr.html
+++ b/Lab1/varugr.html
@@ -13,73 +13,77 @@
 </head>
 
 <body>
-   <div class="main">
-  <div class="picture-stack" style="
-      background: url(Resources/dark-souls-larger.png) center;
-      background-size: cover;
-      background-repeat: no-repeat;">
+  <div class="main vcard">
+    <div class="picture-stack" style="
+        background: url(Resources/dark-souls-larger.png) center;
+        background-size: cover;
+        background-repeat: no-repeat;">
 
-    <div class="header">
-      <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
-      <div class="separating-div"></div>
-      <div class="members">MEMBERS</div>
-      <a href="kat.html" class="member-1">I</a>
-      <a href="manny.html" class="member-2">II</a>
-      <a href="nansam.html" class="member-3">III</a>
-      <a href="varugr.html" class="member-4">IV</a>
-      <a href="montes3.html" class="member-5">V</a>
+      <div class="header">
+        <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
+        <div class="separating-div"></div>
+        <div class="members">MEMBERS</div>
+        <a href="mosquk.html" class="member-1">I</a>
+        <a href="yeboae.html" class="member-2">II</a>
+        <a href="nansam.html" class="member-3">III</a>
+        <a href="varugr.html" class="member-4">IV</a>
+        <a href="montes3.html" class="member-5">V</a>
+      </div>
+      
+      <div class="hero">
+        <div class="member-number">
+          <div class="weather-vanes-title">IV</div>
+        </div>
+        <div class="headshot-and-name">
+          <img class = "photo" src="Resources/ryan.png" style="aspect-ratio: inherit;" height="300" alt="Ryan Varughese"/>
+          <div class="weather-vanes-title2">
+            <span class = "n">
+              <span class="given-name">Ryan</span>
+              <span class="family-name">Varughese</span>
+            </span>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="hero">
-      <div class="member-number">
-        <div class="weather-vanes-title">IV</div>
-      </div>
-      <div class="headshot-and-name">
-        <img src="Resources/ryan.png" style="aspect-ratio: inherit;" height="300" alt="Ryan Varughese"/>
-        <div class="weather-vanes-title2">Ryan Varughese</div>
+    <div class="contact-information-start">
+      <div class="contact-information">CONTACT INFORMATION</div>
+      <div class="contact-info vcard">
+        
+        <div class="text">
+          <div class="header">ADDRESS ∘</div>
+          <div class="description">
+            <div class="adr">
+              <span class="street-address">386 Congress St</span>, 
+              <span class="locality">Troy</span>, 
+              <span class="region">NY</span> 
+              <span class="postal-code">12180</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="text">
+          <div class="header">PHONE ∘</div>
+          <div class="description">
+            <div class="tel">(631)-574-7915</div>
+          </div>
+        </div>
+
+        <div class="text">
+          <div class="header">EMAIL ∘</div>
+          <div class="description">
+            <div class="email">
+              <a class="email" href="mailto:varugr@rpi.edu">varugr@rpi.edu</a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
+
+
   <div class="portfolio-information">
-
-
-
-  <div class="contact-information">CONTACT INFORMATION</div>
-  <div class="contact-info vcard">
-    <div class="text">
-      <div class="title">
-        <div class="address">ADDRESS ∘</div>
-      </div>
-      <div class="description">
-        <div class="desc adr">
-          <span class="street-address">386 Congress St</span>, 
-          <span class="locality">Troy</span>, 
-          <span class="region">NY</span> 
-          <span class="postal-code">12180</span>
-        </div>
-      </div>
-    </div>
-    <div class="text">
-      <div class="title">
-        <div class="phone">PHONE ∘</div>
-      </div>
-      <div class="description">
-        <div class="tel">(631)-574-7915</div>
-      </div>
-    </div>
-    <div class="text">
-      <div class="title">
-        <div class="email">EMAIL ∘</div>
-      </div>
-      <div class="description">
-        <div class="email">
-          <a class="email" href="mailto:varugr@rpi.edu">varugr@rpi.edu</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
 
 
     <div class="introduction">INTRODUCTION</div>
