Finished changes to my portfolio site + Fixed small CSS bug with site header

--- a/Lab1/mosquk.html
+++ b/Lab1/mosquk.html
@@ -20,7 +20,7 @@
       <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/kat.jpeg" data-info="Member 1">I</a>
         <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
         <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
         <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
@@ -29,10 +29,10 @@
 
     <div class="hero">
       <div class="member-number">
-        <div class="weather-vanes-title">V</div>
+        <div class="weather-vanes-title">I</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/Kat.JPG" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Katrina Mosquera-Maykovych"/>
+        <img src="Resources/kat.jpeg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Katrina Mosquera-Maykovych"/>
         <div class="weather-vanes-title2 fn">Katrina Mosquera-Maykovych</div>
       </div>
     </div>
@@ -85,9 +85,7 @@
           <div class="secondary-school">SECONDARY SCHOOL ∘</div>
         </div>
         <div class="description">
-          <div class="kennebunk-high-school">
-            Joseph A. Foran High School
-          </div>
+            <a href="https://www.milforded.org/o/fhs">Joseph A. Foran High School</a>
         </div>
       </div>
       <div class="text">
@@ -143,7 +141,7 @@
       <div class="text">
         <div class="title">
           <div class="project">
-            Intro to ITWS - ClassInsight | Fullstack Developer
+            Intro to ITWS - Img2Pxl | Fullstack Developer
           </div>
         </div>
         <div class="description">
@@ -153,29 +151,35 @@
       <div class="work-exp-details">
         <div class = info>
           <ul>
-            <li>Managed team collaboration and version control using Git, employing branching and issue tracking methodologies to streamline development</li>
-            <li>Used Javascript, JQuery, and AJAX to build a case-insensitive search as well as filter through a static database of RPI classes</li>
-            <li>Created a javascript program that used local storage to allow for users to bookmark classes</li>
-            <li>Developed a full-stack review system by implementing a MySQL database and PHP backend, allowing users to submit, view, and rate class reviews</li>
+            <li>Implemented a number of standard image-processing algorithms to apply various filters/effects to a user's image.</li>
+            <li>Designed a visually-striking landing page for Img2Pxl, making use of Windows95 / Vaporwave design sensibilites and motifs. </li>
+            <li>Developed a color-mapping algorihm based on nearest Euclidean distance to map a user's desired color palette onto an existing image.</li>
           </ul>
         </div>
       </div>
       <div class="text">
         <div class="title">
           <div class="project">
-            Personal Project - Personal Website | Fullstack Developer
+            Personal Project - Parametrized Galaxy Generator | Fullstack Developer
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">HTML | CSS | JavaScript | PHP | MySQL</div>
+          <div class="start-date-end-date">HTML | CSS | JavaScript</div>
         </div>
       </div>
       <div class="work-exp-details">
         <div class = info>
+          Developed a webpage that uses JavaScript to generate an 1024x1024 pixel galaxy texture according to user-specified parameters. Some of these parameters include:
           <ul>
-            <li>Designed and developed a personal website to showcase my portfolio, projects, and resume using HTML, CSS, and JavaScript for the front-end</li>
-            <li>Implemented a PHP backend to handle form submissions and interact with a MySQL database for storing user messages</li>
-            <li>Ensured responsive design principles were applied, making the website accessible and visually appealing across various devices and screen sizes</li>
+            <li>Star size</li>
+            <li>Star density</li>
+            <li>Star variability (size)</li>
+            <li>Star color (monotone or duotone)</li>
+            <li>Star shape</li>
+            <li>Nebula size</li>
+            <li>Nebula density</li>
+            <li>Nebula color (monotone or duotone)</li>
+            <li>Background color (solid or gradient)</li>
           </ul>
         </div>
       </div>
@@ -185,60 +189,57 @@
       <div class="text">
         <div class="title">
           <div class="work-experience-1">
-            Kennebunkport Parks and Recreation - Lead Summer Camp Counselor
+            Funbotics - VP of Research & Development
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">June 2021 - August 2024</div>
+          <div class="start-date-end-date">August 2022 - Present</div>
         </div>
       </div>
       <div class="work-exp-details">
         <div class = info>
           <ul>
-            <li>Demonstrated leadership by planning and executing daily activities for groups of campers, ensuring a safe and productive environment</li>
-            <li>Coordinated camp schedules and activities, ensuring they aligned with camp goals and objectives</li>
-            <li>Adapted quickly to changing circumstances while maintaining a calm demeanor</li>
-            <li>Collaborated within a team of counselors to coordinate schedules and resolve unexpected issues, fostering positive and effective team dynamics</li>
+            <li>Lead the research and development of innovative STEM education programs and robotics kits designed to engage and inspire middle school students.</li>
+            <li>Oversee the design, testing, and refinement of educational hardware and curriculum, ensuring accessibility, ease of use, and alignment with Funbotics’ mission.</li>
+            <li>Collaborate with cross-functional teams to scale new initiatives, integrating feedback from students, educators, and partners to drive continuous improvement.</li>
           </ul>
         </div>
       </div>
       <div class="text">
         <div class="title">
           <div class="work-experience-2">
-            Kennebunkport Parks and Recreation - After School Care Assistant
+            Walmart - Front-end Sales Associate
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">September 2021 - June 2024</div>
+          <div class="start-date-end-date">September 2023 - November 2023</div>
         </div>
       </div>
       <div class="work-exp-details">
         <div class = info>
           <ul>
-            <li>Supervised and ensured the safety of children in an after-school program, maintaining a secure and engaging environment</li>
-            <li>Planned and facilitated educational and recreational activities that promoted social, emotional, and physical development for attending campers</li>
-            <li>Communicated effectively with parents and guardians regarding their children's progress and any concerns</li>
-            <li>Worked collaboratively with a team of counselors to create a cohesive and supportive atmosphere for all participants</li>
+            <li>Supported front-end operations by restocking merchandise and keeping checkout areas clean and orderly to improve efficiency and customer satisfaction.</li>
+            <li>Operated cash registers, processed transactions accurately, and maintained compliance with cash-handling and loss-prevention policies.</li>
+            <li>Delivered excellent customer service by assisting shoppers with purchases, answering product inquiries, and ensuring a positive checkout experience.</li>
           </ul>
         </div>
       </div>
       <div class="text">
         <div class="title">
           <div class="work-experience-3">
-            Big Tech Company - Software Engineering Intern 
+            Fiverr - Freelance Illustrator/Designer 
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">June 2025 - August 2025</div>
+          <div class="start-date-end-date">April 2017 - April 2022</div>
         </div>
       </div>
       <div class="work-exp-details">
         <div class = info>
           <ul>
-            <li>Worked on a team to develop and maintain web applications, contributing to both front-end and back-end development tasks</li>
-            <li>Participated in code reviews and collaborated with senior developers to ensure code quality and adherence to best practices for software development</li>
-            <li>Assisted in the design and implementation of new features, utilizing technologies such as React, Node.js, and SQL databases</li>
-            <li>Gained experience in agile development methodologies, attending daily stand-ups and sprint planning sessions</li>
+            <li>Created 20+ custom commissioned digital artworks for clients worldwide, tailoring each design to meet unique stylistic and project requirements.</li>
+            <li>Managed the full creative process from concept development to final delivery, ensuring high-quality work and on-time completion of all projects.</li>
+            <li>Built and maintained strong client relationships through clear communication, revisions, and professional customer service, resulting in repeat business and positive reviews.</li>
           </ul>
         </div>
       </div>
@@ -247,10 +248,10 @@
     <div class="skills2">
       <div class="skill-div">
         <ul class="skill-list">
-          <li><b>Languages:</b> C++, C#, C, Java, Python, R-Script, HTML, Javascript, SQL, GDScript</li>
-          <li><b>Databases:</b> MySQL, PHPmyAdmin</li>
-          <li><b>Methodologies:</b> Agile, Scrum</li>
-          <li><b>Development Tools:</b> Git, GitHub, Azure, AWS</li>
+          <li><b>Programming Languages:</b> C++, C#, C, Java, Python, HTML, Javascript, SQL, Arduino</li>
+          <li><b>CAD / 3D Modeling:</b> Blender, OnShape, Cura</li>
+          <li><b>Graphics Design:</b> Photoshop, Figma, Clip Studio </li>
+          <li><b>Music Production/Engineering:</b> FL Studio, BandLab, Vocaloid4-FE</li>
         </ul>
       </div>
     </div>
