Updated skills section

--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -76,7 +76,7 @@
       <div class="introduction-statement-text">
         A third-year undergraduate at Rensselaer Polytechnic Institute, majoring in Information Technology & Web Science.
         Mainly experienced with C++ programming and HCI-friendly design. I believe the form and "feel" of an application is equally important as its function. 
-        In my spare time I experiment with technologies that aid in my projects, whether practically or aesthetically, as well as cybersecurity.
+        In my spare time I experiment with technologies that aid in my projects, whether practically or aesthetically, as well as cybersecurity. I also enjoy game modding.
         Open to internships, apprenticeships, job shadowing and research opportunities.
       </div>
     </div>
@@ -245,24 +245,15 @@
         </div>
       </div>
     </div>
-    <div class="skills">SKILLS</div>
-    <div class="skills2">
-      <div
-        class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8"
-      >
-        <ul
-          class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8-span"
-        >
-          <li>Skill #1</li>
-          <li>Skill #2</li>
-          <li>Skill #3</li>
-          <li>Skill #4</li>
-          <li>Skill #5</li>
-          <li>Skill #6</li>
-          <li>Skill #7</li>
-          <li>Skill #8</li>
+   <div class="skills">SKILLS</div>
+    <div class="skills2">>
+          <li>Languages: C++, Python, Java, JavaScript, HTML, SQL</li>
+          <li>Databases: MySQL, PHPmyAdmin</li>
+          <li>Tools: Git + GitHub, Visual Studio + VS Code, Clion, IntelliJ</li>
+          <li>Focuses: Object-Oriented Programming, Human-Computer Interaction, IT Infrastructure, Web Application Pentesting</li>
         </ul>
       </div>
+    </div>
     </div>
   </div>
 </div>
