--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="image">
-        <img class="website-thumbnail" src="website-thumbnail0.png" />
+        <img class="website-thumbnail" src="Resources/websiteScreenshot.png" />
       </div>
     </div>
     <div class="prev-work-2">
