Working on portfolio, added landing page thumbnails

--- a/Lab1/mosquk.html
+++ b/Lab1/mosquk.html
@@ -32,7 +32,7 @@
         <div class="weather-vanes-title">I</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/kat.jpeg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Katrina Mosquera-Maykovych"/>
+        <img src="Resources/kat.jpeg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Katrina Mosquera-Maykovych">
         <div class="weather-vanes-title2 fn">Katrina Mosquera-Maykovych</div>
       </div>
     </div>
@@ -85,7 +85,7 @@
           <div class="secondary-school">SECONDARY SCHOOL ∘</div>
         </div>
         <div class="description">
-            <a href="https://www.milforded.org/o/fhs">Joseph A. Foran High School</a>
+            <a href="https://www.milforded.org/o/fhs" class="secondary-school">Joseph A. Foran High School</a>
         </div>
       </div>
       <div class="text">
