--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -33,7 +33,7 @@
         <div class="weather-vanes-title">III</div>
       </div>
       <div class="headshot-and-name">
-        <img src="Resources/MJ.jpg" style="aspect-ratio: inherit;" height="300" alt="Mary Jane Nansaram"/>
+        <img src="Resources/MJ.jpg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Mary Jane Nansaram"/>
         <div class="weather-vanes-title2 fn">Mary Jane Nansaram</div>
       </div>
     </div>
