--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Resources/WV-monogram.svg">
@@ -9,106 +9,90 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lacquer&display=swap" rel="stylesheet">
-</head>
-<body>
-   <div class="main">
-  <div
-    class="picture-stack"
-    style="
-      background: url(Resources/dark-souls-larger.png) center;
-      background-size: cover;
-      background-repeat: no-repeat;
-    "
-  >
-    <div class="header">
-      <div class="wv-monogram">WV</div>
-      <a href="#prev-works" style="padding: 0px;"><div class="previous-works">PREVIOUS WORKS</div></a>
-      <div class="separating-div"></div>
-      <div class="members">MEMBERS</div>
-        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
-        <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
-        <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
-        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
-        <a href="montes3.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
-    </div>
-    <div class="hero">
-      <div class="weather-vanes-logo-svg-1">
-        <img class="logo" src="Resources/WeatherVanes_logo_SVG.svg" width="250" height="250"/>
-      </div>
-      <div class="weather-vanes-title">WEATHERVANES</div>
-      <div class="team-slogan-subtitle">
-        Guided by the Wind, Forged in Fire.
-      </div>
-    </div>
-  </div>
-  <div id="prev-works" class="previous-works2">
-    <div class="previous-works3">PREVIOUS WORKS</div>
-    <div class="prev-work-1">
-      <div class="text">
-        <div class="title">
-          <div class="weathervanes-website">∘ WEATHERVANES WEBSITE ∘</div>
+  </head>
+  <body>
+    <div class="main">
+      <div class="picture-stack" style="background: url(Resources/dark-souls-larger.png) center; background-size: cover; background-repeat: no-repeat;">
+        <div class="header">
+          <div class="wv-monogram">WV</div>
+          <a href="#prev-works" style="padding: 0px;"><div class="previous-works">PREVIOUS WORKS</div></a>
+          <div class="separating-div"></div>
+          <div class="members">MEMBERS</div>
+          <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+          <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
+          <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
+          <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+          <a href="montes3.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
         </div>
-        <div class="description">
-          <div
-            class="desc-text"
-          >
-            A central hub for WeatherVanes, showcasing our team’s previous
-            projects and works. The site features an overview of who we are, our
-            team slogan, and dedicated profile pages highlighting each team
-            member’s contributions. Designed to give visitors a clear picture of
-            our work and team identity.
+        <div class="hero">
+          <div class="weather-vanes-logo-svg-1">
+            <img class="logo" src="Resources/WeatherVanes_logo_SVG.svg" width="250" height="250" alt="weathervanes-logo">
+          </div>
+          <div class="weather-vanes-title">WEATHERVANES</div>
+          <div class="team-slogan-subtitle">
+            Guided by the Wind, Forged in Fire.
           </div>
         </div>
       </div>
-      <div class="image">
-        <img class="website-thumbnail" src="Resources/team-project-1.png" />
-      </div>
-    </div>
-    <div class="prev-work-2">
-      <div class="text">
-        <div class="title2">
-          <div class="weathervanes-web-app">∘ WEATHERVANES WEB APP ∘</div>
+      <div id="prev-works" class="previous-works2">
+        <div class="previous-works3">PREVIOUS WORKS</div>
+        <div class="prev-work-1">
+          <div class="text">
+            <div class="title">
+              <div class="weathervanes-website">∘ WEATHERVANES WEBSITE ∘</div>
+            </div>
+            <div class="description">
+              <div class="desc-text">
+                A central hub for WeatherVanes, showcasing our team’s previous projects and works. The site features an overview of who we are, our team slogan, and dedicated profile pages highlighting each team member’s contributions.
+                Designed to give visitors a clear picture of our work and team identity.
+              </div>
+            </div>
+          </div>
+          <div class="image">
+            <img class="website-thumbnail" src="Resources/team-project-1.png" alt="weathervanes-website-thumbnail">
+          </div>
         </div>
-        <div class="description2">
-          <div
-            class="desc-text"
-          >
-            An interactive web application created by WeatherVanes, designed to
-            provide users with useful tools and features. The project highlights
-            its tech stack and practical applications, giving visitors insight
-            into both its purpose and implementation.
+        <div class="prev-work-2">
+          <div class="text">
+            <div class="title2">
+              <div class="weathervanes-web-app">∘ WEATHERVANES WEB APP ∘</div>
+            </div>
+            <div class="description2">
+              <div class="desc-text">
+                An interactive web application created by WeatherVanes, designed to provide users with useful tools and features. The project highlights its tech stack and practical applications, giving visitors insight into both its
+                purpose and implementation.
+              </div>
+            </div>
+          </div>
+          <div class="image">
+            <img class="website-thumbnail" src="Resources/team-project-2.png" alt="weathervanes-wep-app-thumbnail">
+          </div>
+        </div>
+        <div class="prev-work-3">
+          <div class="text">
+            <div class="title">
+              <div class="project-3">∘ WEATHERVANES CONSTITUTION INTERACTIVE ∘</div>
+            </div>
+            <div class="description">
+              <div class="desc-text">
+                This project is an interactive web app presenting the full text of the U.S. Constitution, including Articles I–VII and the first ten Amendments, with semantically meaningful HTML for accessibility. The site provides original
+                analysis of each section, exploring historical context, significance, and relevance today, aiming to deepen understanding and encourage civic engagement.
+              </div>
+            </div>
+          </div>
+          <div class="image">
+            <img class="website-thumbnail" src="Resources/team-project-3.png" alt="weathervanes-constitution-interactive-thumbnail">
           </div>
         </div>
       </div>
-      <div class="image">
-        <img class="website-thumbnail" src="Resources/team-project-2.png" />
-      </div>
     </div>
-    <div class="prev-work-3">
-      <div class="text">
-        <div class="title">
-          <div class="project-3">∘ WEATHERVANES CONSTITUTION INTERACTIVE ∘</div>
-        </div>
-        <div class="description">
-          <div class="desc-text">
-            This project is an interactive web app presenting the full text of the U.S. Constitution, including Articles I–VII and the first ten Amendments, with semantically meaningful HTML for accessibility. The site provides original analysis of each section, exploring historical context, significance, and relevance today, aiming to deepen understanding and encourage civic engagement.
-          </div>
-        </div>
-      </div>
-      <div class="image">
-        <img class="website-thumbnail" src="Resources/team-project-3.png" />
-      </div>
+
+    <div id="member-hover-card" class="member-card">
+      <img id="member-card-image" src="script" alt="Team Member">
+      <div id="member-card-name"></div>
+      <div id="member-card-info"></div>
     </div>
-  </div>
-</div>
 
-
-<div id="member-hover-card" class="member-card">
-  <img id="member-card-image" src="script" alt="Team Member">
-  <div id="member-card-name"></div>
-  <div id="member-card-info"></div>
-</div>
-
-<script src="Resources/main.js"></script>
-</body>
+    <script src="Resources/main.js"></script>
+  </body>
 </html>
