--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -178,70 +178,58 @@
       <div class="text">
         <div class="title">
           <div class="work-experience-1-include-job-title">
-            WORK EXPERIENCE #1 (Include Job Title)
+            Verizon - Cloud Threat Hunter
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">Start Date - End Date</div>
+          <div class="start-date-end-date">August 2023 - Present</div>
         </div>
       </div>
       <div class="work-exp-details">
-        <div
-          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
-        >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">
+           <ul>
+            <li>Proactively searches for threats and vulnerabilities within several of Verizon's cloud environments.</li>
+            <li>Conducts risk assessments, in-depth analysis, and forensics investigations to determine the cause and scale of incidents.</li>
+            <li>Mentors and coaches analysts to build and maintain skills for producting quality and consistency analysis.</li>
+          </ul>
         </div>
       </div>
       <div class="text">
         <div class="title">
           <div class="work-experience-2-include-job-title">
-            WORK EXPERIENCE #2 (Include Job Title)
+            Google - Tech Lead for C++ Ecosystem Safety
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">Start Date - End Date</div>
+          <div class="start-date-end-date">September 2024 - Present</div>
         </div>
       </div>
       <div class="work-exp-details">
-        <div
-          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
-        >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">
+          <ul>
+            <li>Leads Google's C++ safety efforts, including dynamic analysis, static analysis, fuzzing, and related areas.</li>
+            <li>Develops high-trust customer relationships to understand their needs and pain points as related to Google's domains, serving as an expert for customers.</li>
+            <li>Acts as a technical brige among domain tech leads and customer tech leads, acting as the technical owner for high impact product area-wide customer projects.</li>
+          </ul>
         </div>
       </div>
       <div class="text">
         <div class="title">
           <div class="work-experience-3-include-job-title">
-            WORK EXPERIENCE #3 (Include Job Title)
+           Nintendo - Brand Ambassador
           </div>
         </div>
         <div class="description">
-          <div class="start-date-end-date">Start Date - End Date</div>
+          <div class="start-date-end-date">March 2020 - August 2021</div>
         </div>
       </div>
       <div class="work-exp-details">
-        <div
-          class="lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation-ullamco-laboris-nisi-ut-aliquip-ex-ea-commodo-consequat-duis-aute-irure-dolor-in-reprehenderit-in-voluptate-velit-esse-cillum-dolore-eu-fugiat-nulla-pariatur-excepteur-sint-occaecat-cupidatat-non-proident-sunt-in-culpa-qui-officia-deserunt-mollit-anim-id-est-laborum3"
-        >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+        <div class="info">
+          <ul>
+            <li>Performed Demos for consoles such as the Nintendo Switch, and engaged with event attendees in a fun, informative way.</li>
+            <li>Managed event setup, merchandise and freebie distrubition, and crowd interaction.</li>
+            <li>Represented Nintendo with enthusiam, professionalism, and reliability.</li>
+          </ul>
         </div>
       </div>
     </div>
