--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -234,7 +234,7 @@
       </div>
     </div>
    <div class="skills">SKILLS</div>
-    <div class="skills2">>
+    <div class="skills2">
           <li>Languages: C++, Python, Java, JavaScript, HTML, SQL</li>
           <li>Databases: MySQL, PHPmyAdmin</li>
           <li>Tools: Git + GitHub, Visual Studio + VS Code, Clion, IntelliJ</li>
